// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props exportedFieldsUrl 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="l"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiTitle
          size="l"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
    <div>
      <EuiSpacer />
      <EuiButton
        color="primary"
        fill={false}
        href="exported_fields_url"
        iconSide="left"
        rel="noopener"
        size="m"
        target="_blank"
        type="button"
      >
        <FormattedMessage
          defaultMessage="View exported fields"
          id="kbn.home.tutorial.introduction.viewButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    </div>
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props iconType 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="l"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiIcon
          size="xl"
          type="logoElastic"
        />
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiTitle
          size="l"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props isBeta 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="l"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiTitle
          size="l"
        >
          <h2>
            Great tutorial
              
            <EuiBetaBadge
              label="Beta"
              tooltipPosition="top"
            />
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`props previewUrl 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="l"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiTitle
          size="l"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  >
    <EuiImage
      allowFullScreen={true}
      alt="screenshot of primary dashboard."
      fullScreenIconColor="dark"
      hasShadow={true}
      size="l"
      url="preview_image_url"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`render 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="l"
    >
      <EuiFlexItem
        grow={false}
      >
        <EuiTitle
          size="l"
        >
          <h2>
            Great tutorial
              
          </h2>
        </EuiTitle>
      </EuiFlexItem>
    </EuiFlexGroup>
    <Content
      text="this is a great tutorial about..."
    />
  </EuiFlexItem>
  <EuiFlexItem
    grow={false}
  />
</EuiFlexGroup>
`;
